2008-04-17  Sebastian Dröge  <slomo@circular-chaos.org>

	* gst-libs/gst/audio/gstringbuffer.c: (gst_ring_buffer_may_start):
	Use g_atomic_int_set() instead of gst_atomic_int_set().

2008-04-17  Sebastian Dröge  <slomo@circular-chaos.org>

	* ext/gio/gstgio.c: (gst_gio_get_supported_protocols):
	Return NULL instead of a gchar * array with one NULL element if we
	don't get any supported URI schemes from GIO.

2008-04-15  Stefan Kost  <ensonic@users.sf.net>

	* gst/audiotestsrc/gstaudiotestsrc.c:
	  Remove cpp style commented old code.

2008-04-15  Stefan Kost  <ensonic@users.sf.net>

	* gst/playback/gstdecodebin2.c:
	  Fix signal docs.

2008-04-14  Tim-Philipp Müller  <tim at centricular dot net>

	* ext/pango/gsttextoverlay.c: (gst_text_overlay_class_init),
	  (gst_text_overlay_init):
	  Fix textoverlay unit test again by making the supposed default
	  value for the wait-text property the actual default value.
	  Also fix Since: tag for new property.

2008-04-11  Tim-Philipp Müller  <tim at centricular dot net>

	* gst-libs/gst/video/video.c: (gst_video_format_new_caps),
	  (gst_video_format_to_fourcc), (gst_video_format_get_row_stride),
	  (gst_video_format_get_pixel_stride),
	  (gst_video_format_get_component_width),
	  (gst_video_format_get_component_height),
	  (gst_video_format_get_component_offset), (gst_video_format_get_size),
	  (gst_video_format_convert):
	  Add guards to these functions to ensure sane input values.

	* tests/check/libs/video.c:
	  Fix unit test not to create caps with width=0 and height=0.

2008-04-11  Wim Taymans  <wim.taymans@collabora.co.uk>

	* docs/design/draft-keyframe-force.txt:
	Fix typo.

	* gst/playback/gstqueue2.c: (update_buffering),
	(gst_queue_handle_src_query):
	Set buffering mode in the messages.
	Set buffering percent in the query.

	* tests/examples/seek/seek.c: (update_fill), (msg_state_changed),
	(do_stream_buffering), (do_download_buffering), (msg_buffering):