@@ -260,8 +260,8 @@ gst_gdp_depay_chain (GstPad * pad, GstBuffer * buffer)
         this->header = header;
 
         GST_LOG_OBJECT (this,
-            "read GDP header, payload size %d, switching to state PAYLOAD",
-            this->payload_length);
+            "read GDP header, payload size %d, payload type %d, switching to state PAYLOAD",
+            this->payload_length, this->payload_type);
         this->state = GST_GDP_DEPAY_STATE_PAYLOAD;
         break;
       }
@@ -288,8 +288,9 @@ gst_gdp_depay_chain (GstPad * pad, GstBuffer * buffer)
           goto wrong_type;
         }
 
-        if (!gst_dp_validate_payload (GST_DP_HEADER_LENGTH, this->header,
-                gst_adapter_peek (this->adapter, this->payload_length))) {
+        if (this->payload_length
+            && (!gst_dp_validate_payload (GST_DP_HEADER_LENGTH, this->header,
+                    gst_adapter_peek (this->adapter, this->payload_length)))) {
           goto payload_validate_error;
         }
 
